Fix alignment and typeform

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -246,7 +246,7 @@ body {
         .t-product {
             height: 40px;
             justify-content: flex-end;
-            align-items: flex-end;
+            align-items: flex-start;
             display: flex;
             flex-direction: column; 
             width: 140px;
